--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@libsql/client": "0.6.0",
     "cors": "2.8.5",
     "express": "4.19.2",
+    "jsonwebtoken": "9.0.2",
     "mysql2": "3.9.6",
     "zod": "3.22.4"
   }
